--- a/src/main/resources/templates/fragments/new-professor.html
+++ b/src/main/resources/templates/fragments/new-professor.html
@@ -21,6 +21,14 @@
                             <input placeholder="Last Name" required="true" type="text"
                                    class="form-control" id="professor-last-name" name="lastName" />
                         </div>
+                        <div class="form-group">
+                            <input placeholder="Username" required="true" type="text"
+                                   class="form-control" id="professor-username" name="user.userName" />
+                        </div>
+                        <div class="form-group">
+                            <input placeholder="E-Mail" required="true" type="text"
+                                   class="form-control" id="professor-email" name="user.email" />
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
