--- a/src/main/resources/templates/professor.html
+++ b/src/main/resources/templates/professor.html
@@ -13,12 +13,16 @@
                 var id = button.data('professor-id');
                 var firstName = button.data('professor-first-name');
                 var lastName = button.data('professor-last-name');
+                var userName = button.data('professor-username');
+                var email = button.data('professor-email');
                 var title = button.data('modal-type');
                 var action = button.data('form-action');
 
                 $('#professor-id').val(id);
                 $('#professor-first-name').val(firstName);
                 $('#professor-last-name').val(lastName);
+                $('#professor-username').val(userName);
+                $('#professor-email').val(email);
                 $('#span-title').text(title);
                 $('#form-professor').attr('action',action);
             });
@@ -62,28 +66,36 @@
             data-professor-id="0"
             data-professor-first-name=""
             data-professor-last-name=""
+            data-professor-username=""
+            data-professor-email=""
             data-modal-type="New"
             th:attr="data-form-action=@{/professor/new}"
             data-target="#professor-modal" >New Professor</button>
 
-    <div th:if="${professors}" class="col-md-11">
+    <div th:if="${professors}" class="col-md-12">
         <table class="table table-striped">
             <thead>
             <th scope="col">ID</th>
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
+            <th scope="col">Username</th>
+            <th scope="col">E-Mail</th>
             <th scope="col">Actions</th>
             </thead>
             <tbody>
             <tr scope="row" th:each="professor : ${professors}">
                 <td class="col-md-1" th:text="${professor.id}"></td>
-                <td class="col-md-4" th:text="${professor.firstName}"></td>
-                <td class="col-md-4" th:text="${professor.lastName}"></td>
+                <td class="col-md-2" th:text="${professor.firstName}"></td>
+                <td class="col-md-2" th:text="${professor.lastName}"></td>
+                <td class="col-md-2" th:text="${professor.user.userName}"></td>
+                <td class="col-md-3" th:text="${professor.user.email}"></td>
                 <td class="col-md-2">
                     <button type="button" class="btn btn-primary" data-toggle="modal"
                             th:attr="data-professor-id=${professor.id},
                                 data-professor-first-name=${professor.firstName},
                                 data-professor-last-name=${professor.lastName},
+                                data-professor-username=${professor.user.userName},
+                                data-professor-email=${professor.user.email},
                                 data-form-action=@{/professor/edit}"
                             data-modal-type="Edit"
                             data-target="#professor-modal">Edit</button>
