--- a/src/main/resources/templates/fragments/new-course.html
+++ b/src/main/resources/templates/fragments/new-course.html
@@ -13,10 +13,36 @@
                 <div class="modal-body">
                     <form  method="post" id="form-course">
                         <div class="form-group">
-                            <input type="hidden" name="id" id="course-id"/>
-                            <input placeholder="Course Name" required="true" autofocus="true" type="text"
-                                   class="form-control" id="course-name" name="name" />
+                            <div class='input-group' id='course-id-name'>
+                                <input type="hidden" name="id" id="course-id"/>
+                                <input placeholder="Course Name" required="true" autofocus="true" type="text"
+                                       class="form-control" id="course-name" name="name" />
+                            </div>
                         </div>
+                        <div class="form-group">
+                            <div class='input-group' id='course-professor'>
+                                <select class="form-control" name="professor.id" id="professorId">
+                                    <option
+                                            th:value="${p.id}"
+                                            th:each="p : ${professors}"
+                                            th:text="${p.firstName + ' '+ p.lastName}">professor's name</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group" >
+                            <input id='course-start-date'
+                                   type='text' placeholder="Start Date" class="form-control" name="startDate"
+                                   autocomplete="off" onkeydown="return false" required="true"/>
+
+                        </div>
+
+                        <div class="form-group" >
+                            <input id='course-end-date'
+                                   type='text' placeholder="End Date" class="form-control" name="endDate"
+                                   autocomplete="off" onkeydown="return false" required="true"/>
+
+                        </div>
+
                     </form>
                 </div>
                 <div class="modal-footer">
